--- a/config/content.htm
+++ b/config/content.htm
@@ -1,34 +1,6 @@
-<h1>Stage1,2</h1>
-<h2>stage1</h2>
-<h3>ag6</h3>
-<p><span>題目:套圈遊樂器</span></p>
-<h3>ag9</h3>
-<p>題目:自動折衣機</p>
-<h3>ag12</h3>
-<p>題目:<span>平面四桿機構</span></p>
-<h3>ag15</h3>
-<p>題目:水車</p>
-<h2>stage2</h2>
-<h3>ag3</h3>
-<p>專案主題: 自動砂帶機</p>
-<p>製作理念: 由於砂帶機還需要人工操作 砂帶滾動時有危險性 所以想增加夾具 讓砂帶機可以自動操作</p>
-<p>來避免手直接接觸 降低危險性 使工作環境更加安全</p>
-<h3>ag6</h3>
-<p><span>題目 : 1.棒球打擊模擬</span></p>
-<ol>
-<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
-<li>使用類似螺紋的概念把球輸送到想要的平台</li>
-<li>希望可以把球的軌跡沿著螺旋線上升</li>
-<li>做成一個循迴機構</li>
-</ol>
-<p>主要物件: 2.隻機械手臂(王銘楫和廖璟承) 平台和送球機構(許耀中和范維倫)</p>
-<h3>ag9</h3>
-<p>題目:旋轉木馬</p>
-<p>製作理念:心血來潮</p>
-<h1>stage3</h1>
-<h2>ag5</h2>
+<h1>Introduction</h1>
+<p>組長:<span>40823111 許耀中</span></p>
 <p>組員:</p>
-<p>40823111 許耀中</p>
 <p>40823115 黃歸吉</p>
 <p>40823120 范維倫</p>
 <p>40823124 廖璟程</p>
@@ -37,6 +9,34 @@
 <p><span>40823139 王銘楫</span></p>
 <p>40823140 林子恩</p>
 <p>題目:</p>
+<h1>Stage1,2</h1>
+<h2>子恩組</h2>
+<h3>stage1</h3>
+<h4>ag6</h4>
+<p><span>題目:套圈遊樂器</span></p>
+<h4>ag9</h4>
+<p>題目:自動折衣機</p>
+<h4>ag12</h4>
+<p>題目:<span>平面四桿機構</span></p>
+<h4>ag15</h4>
+<p>題目:水車</p>
+<h3>stage2</h3>
+<h4>ag3</h4>
+<p>專案主題: 自動砂帶機</p>
+<p>製作理念: 由於砂帶機還需要人工操作 砂帶滾動時有危險性 所以想增加夾具 讓砂帶機可以自動操作</p>
+<p>來避免手直接接觸 降低危險性 使工作環境更加安全</p>
+<h4>ag6</h4>
+<p><span>題目 : 1.棒球打擊模擬</span></p>
+<ol>
+<li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
+<li>使用類似螺紋的概念把球輸送到想要的平台</li>
+<li>希望可以把球的軌跡沿著螺旋線上升</li>
+<li>做成一個循迴機構</li>
+</ol>
+<p>主要物件: 2.隻機械手臂(王銘楫和廖璟承) 平台和送球機構(許耀中和范維倫)</p>
+<h4>ag9</h4>
+<p>題目:旋轉木馬</p>
+<p>製作理念:心血來潮</p>
 <h1>week</h1>
 <h2>w10</h2>
 <h2>w11</h2>
