--- a/content/Introduction.html
+++ b/content/Introduction.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></li></ul></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='ag5.html'>ag5</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='子恩組.html'>子恩組</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,9 +134,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">ag9-1 << <a href='ag9-1.html'>Previous</a> <a href='ag15.html'>Next</a> >> ag15<br /><h1>ag12</h1>
-<p>題目:<span>平面四桿機構</span></p>
-<br />ag9-1 << <a href='ag9-1.html'>Previous</a> <a href='ag15.html'>Next</a> >> ag15</div>
+    <div id="tipue_search_content"> <a href='Stage1,2.html'>Next</a> >> Stage1,2<br /><h1>Introduction</h1>
+<p>組長:<span>40823111 許耀中</span></p>
+<p>組員:</p>
+<p>40823115 黃歸吉</p>
+<p>40823120 范維倫</p>
+<p>40823124 廖璟程</p>
+<p>40823126 楊育翔</p>
+<p>40823128 曾鑵<span>斁</span></p>
+<p><span>40823139 王銘楫</span></p>
+<p>40823140 林子恩</p>
+<p>題目:</p>
+<br /> <a href='Stage1,2.html'>Next</a> >> Stage1,2</div>
         
     <!-- footer -->
       <div class="container">
