--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -121,7 +121,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></li></ul></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='ag5.html'>ag5</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='子恩組.html'>子恩組</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -132,4 +132,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='Stage1,2.html'>Stage1,2</a><ul><li><a href='stage1.html'>stage1</a><ul><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li><a href='stage2.html'>stage2</a><ul><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></li></ul></ul><li><a href='stage3.html'>stage3</a><ul><li><a href='ag5.html'>ag5</a></li></ul><li><a href='week.html'>week</a><ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='Introduction.html'>Introduction</a><li><a href='Stage1,2.html'>Stage1,2</a><ul><li><a href='子恩組.html'>子恩組</a><ul><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li><a href='week.html'>week</a><ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li></ul></section></div></body></html>
