--- a/content/子恩組.html
+++ b/content/子恩組.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='ag6-1.html'>ag6-1</a><li><a href='ag9-1.html'>ag9-1</a><li><a href='ag12.html'>ag12</a><li><a href='ag15.html'>ag15</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='ag3.html'>ag3</a><li><a href='ag6-2.html'>ag6-2</a><li><a href='ag9-2.html'>ag9-2</a></li></li></ul></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='ag5.html'>ag5</a></li></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='Stage1,2.html'>Stage1,2</a><ul class='dropdown'><li class='has-children'><a href='子恩組.html'>子恩組</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></li></ul></ul><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,9 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">ag12 << <a href='ag12.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>ag15</h1>
-<p>題目:水車</p>
-<br />ag12 << <a href='ag12.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+    <div id="tipue_search_content">Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1<br /><h1>子恩組</h1>
+<br />Stage1,2 << <a href='Stage1,2.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
