--- a/content/task1.html
+++ b/content/task1.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>w11</h1>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='task2.html'>Next</a> >> task2<br /><h1>task1</h1>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結.</span></p>
+<p><span></span></p>
+<p></p>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
         
     <!-- footer -->
       <div class="container">
