--- a/config/content.htm
+++ b/config/content.htm
@@ -110,9 +110,12 @@ for p in range(len(data)):
 <p>40823129 | Website:<a href="https://40823129.github.io/cd2021">40823129</a> | Repository:<a href="https://github.com/40823129/cd2021">40823129</a> | Group Website:<a href="https://40823129.github.io/stage3-ag6">40823129</a></p>
 <p>40823149 | Website:<a href="https://40823149.github.io/cd2021">40823149</a> | Repository:<a href="https://github.com/40823149/cd2021">40823149</a> | Group Website:<a href="https://40823149.github.io/stage3-ag6">40823149</a></p>
 <p>40823153 | Website:<a href="https://40823153.github.io/cd2021">40823153</a> | Repository:<a href="https://github.com/40823153/cd2021">40823153</a> | Group Website:<a href="https://40823153.github.io/stage3-ag6">40823153</a></p>
-<p><br/><span></span></p><h3>task2</h3>
+<p><br/><span></span></p>
+<h3>task2</h3>
 <p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
 <p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
+<p><span></span></p>
+<p><span></span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p>
@@ -122,10 +125,12 @@ for p in range(len(data)):
 <h3>task3</h3>
 <p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
 <p><span>第一次 直播抽到組員 40823111 40823120</span></p>
+<p><span>1.介紹CoppliaSim 的使用方法</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
-<p></p>
+<p>2.介紹reveal的創見與撰寫網誌內容</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
 <h2>w12</h2>
+<p></p>
 <h2>w13</h2>
 <h2>w14</h2>
 <h2>w15</h2>
