--- a/content/task2.html
+++ b/content/task2.html
@@ -142,6 +142,8 @@ img.add_border {
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
 <br />task1 << <a href='task1.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
