--- a/content/task3.html
+++ b/content/task3.html
@@ -137,8 +137,9 @@ img.add_border {
     <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>task3</h1>
 <p><span>每週各組按照組員順序, 於每堂課程時段, 輪流由 2-3 名學員啟動 OBS + Youtube 直播</span></p>
 <p><span>第一次 直播抽到組員 40823111 40823120</span></p>
+<p><span>1.介紹CoppliaSim 的使用方法</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
-<p></p>
+<p>2.介紹reveal的創見與撰寫網誌內容</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
 <br />w11 << <a href='w11.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
