--- a/config/content.htm
+++ b/config/content.htm
@@ -130,6 +130,8 @@ for p in range(len(data)):
 <p>2.介紹reveal的創見與撰寫網誌內容</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPfVa89UqMA" title="YouTube video player" width="560"></iframe></p>
 <h2>w12</h2>
+<p><span>第二次 直播抽到組員 40823111 40823120</span></p>
+<p><span></span></p>
 <p></p>
 <h2>w13</h2>
 <h2>w14</h2>
