--- a/content/task2.html
+++ b/content/task2.html
@@ -137,14 +137,9 @@ img.add_border {
     <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>task2</h1>
 <p><span>請各組員分別將個人在 stage1 與 stage2 所完成的 coppeliasim 場景, 採 Python remote API 進行操控, 並將過程拍成影片後, 放在個人與分組網站上</span></p>
 <p><span>使用CoppliaSim 更新版:<a href="http://a.kmol.info:88/CoppeliaSimEdu_4.2.0.7z">4.2.0 版</a></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
-<br />task1 << <a href='task1.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+<p><br/><span></span></p>
+<p>1. 第一組模擬</p>
+<p>step1模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/UM7mLBlScJs" title="YouTube video player" width="560"></iframe> step2模擬 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/vVW_nYi4gXU" title="YouTube video player" width="560"></iframe></p><br />task1 << <a href='task1.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
       <div class="container">
