--- a/content/w12.html
+++ b/content/w12.html
@@ -135,6 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
+<p><span>第二次 直播抽到組員 40823111 40823120</span></p>
+<p><span></span></p>
 <p></p>
 <br />task3 << <a href='task3.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
